configuration/base/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.10.10.10
  infrastructure:
    labels:
      bgp: advertise
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${domain_name}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-secret
      allowedRoutes:
        namespaces:
          from: All
